# sghi-etl-core

./: .pre-commit-config.yaml  .releaserc.yml  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
docs/: CHANGELOG.md  conf.py  index.rst
src/sghi/etl/: core.py
src/sghi/miniETL/: core.py
test/sghi/etl/: core_tests.py
test/sghi/mini_etl_tests/: __init__.py  core_tests.py
