[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools~=70.3.0",
    "setuptools_scm[toml]~=8.1.0",
]

[project]
authors = [
    {name = "Savannah Informatics Global Health Institute"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Freeware",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
    "Typing :: Typed"
]
dependencies = [
    "typing-extensions>=4.12.2",
    "sghi-commons @ git+https://github.com/savannahghi/sghi-commons.git@v1.5.0",
]
description = "API specification for components of a simple ETL workflow."
dynamic = ["version"]
keywords = ["sghi", "api", "etl", "pipeline"]
license = {file = "LICENSE"}
maintainers = [
    {name = "Kennedy Kori", email = "kennedykori47@gmail.com"},
    {name = "Salad Guyo", email = "saladguyo60@gmail.com"}
]
name = "sghi-etl-core"
readme = "README.md"
requires-python = ">=3.11" # Support Python 3.10+.

[project.optional-dependencies]
dev = [
    "pre-commit~=3.7.1",
]

docs = [
    "furo==2024.5.6",
    "jaraco.packaging~=10.2.2",
    "rst.linker~=2.6.0",
    "Sphinx~=7.3.7",
    "sphinx-favicon~=1.0.1",
    "sphinx-hoverxref~=1.4.0",
    "sphinx-inline-tabs~=2023.4.21",
    "sphinx-lint~=0.9.1",
    "sphinx-notfound-page~=1.0.2",
]

test = [
    "coverage~=7.6.0",
    "coveralls~=4.0.1",
    "packaging",
    "pyright>=1.1.371",
    "pytest~=8.2.2",
    "pytest-cov~=5.0.0",
    "pytest-forked~=1.6.0",
    "pytest-sugar~=1.0.0",
    "pytest-xdist~=3.6.1",
    "ruff~=0.5.1",
    "tox~=4.16.0",
    "tox-gh-actions~=3.2.0",
]

[project.urls]
changelog = "https://github.com/savannahghi/sghi-etl-core/blob/develop/docs/CHANGELOG.md"
documentation = "https://github.com/savannahghi/sghi-etl-core/blob/develop/README.md"
homepage = "https://github.com/savannahghi/sghi-etl-core/"
repository = "https://github.com/savannahghi/sghi-etl-core.git"

[tool.black]
extend-exclude = """
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  ^/docs/_*.py
)
"""
include = ["src", "test"]
line-length = 79
target-version = ["py311", "py312"]

[tool.coverage.html]
directory = "coverage"

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma:
    "pragma: no branch",
    "pragma: nocover",
    "pragma: no cover",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain about abstract methods, they aren't run:
    '@(abc\.)?abstractmethod',

    # Don't complain about conditional TYPE_CHECKING blocks:
    'if (typing\.)?TYPE_CHECKING:',

    # Don't complain about overloads:
    '@(typing\.)?overload',
]
show_missing = true

[tool.coverage.run]
branch = true
omit = [".tox/*", "docs/*", "test/*"]

[tool.isort]
extend_skip = "docs"
extend_skip_glob = ["*/build/*", "*/docs/*"]
known_first_party = ["sghi", "test"]
line_length = 79
multi_line_output = 3
profile = "black"

[tool.pyright]
analyzeUnannotatedFunctions = true
enableTypeIgnoreComments = true
exclude = [
    "**/.*",
    "**/node_modules",
    "**/__pycache__",
    "build",
]
reportConstantRedefinition = "error"
reportDeprecated = "warning"
reportDuplicateImport = "error"
reportGeneralTypeIssues = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportMissingSuperCall = "warning"
reportMissingTypeStubs = "information"
reportOverlappingOverload = "warning"
reportPrivateUsage = "error"
reportPropertyTypeMismatch = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedImport = "error"
reportUnusedVariable = "warning"
reportWildcardImportFromLibrary = "warning"
strictDictionaryInference = true
strictListInference = true
strictParameterNoneValue = true
strictSetInference = true
typeCheckingMode = "basic"

[tool.pytest.ini_options]
addopts = "--cov=src/sghi --cov-fail-under=100 --cov-report=html --cov-report=term-missing -n auto --junitxml='junitxml_report/report.xml' -vv --durations=10 --cache-clear"
console_output_style = "progress"
log_cli = 1
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "[%(levelname)8s]-%(asctime)s (%(filename)s:%(lineno)s) - %(message)s"
log_cli_level = "WARNING"
python_files = ["*test.py", "*tests.py", "test_*.py"]
norecursedirs = "node_modules venv build env bin .cache .tox"

[tool.ruff]
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".nox",
    ".pytype",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pycache__",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "docs",
    "node_modules",
    "venv",
]
indent-width = 4
line-length = 79
src = ["src", "test"]
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
ignore = [
    "ANN101", # missing-type-self
    "ANN102", # missing-type-cls
    "COM812", # missing-trailing-comma
    "D203",   # one-blank-line-before-class
    "D213",   # multi-line-summary-second-line
    "ISC001", # single-line-implicit-string-concatenation
    "S101",   # assert - Use of assert detected
    "TD003",  # missing-todo-link
]
select = [
    "A",     # flake8-builtins
    "ANN",   # flake8-annotations
    "ARG",   # flake8-unused-arguments
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "BLE",   # flake8-blind-except
    "C4",    # flake8-comprehensions
    "C90",   # mccabe
    "COM",   # flake8-commas
    "D",     # pydocstyle
    "DTZ",   # flake8-datetimez
    "E",     # pycodestyle Error
    "EM",    # flake8-errmsg
    "ERA",   # eradicate
    "EXE",   # flake8-executable
    "F",     # pyflakes
    "FA",    # flake8-future-annotations
    "FBT",   # flake8-boolean-trap
    "FLY",   # flynt
    "FURB",  # refurb
    "G",     # flake8-logging-format
    "I",     # isort
    "INT",   # flake8-gettext
    "ISC",   # flake8-implicit-str-concat
    "LOG",   # flake8-logging
    "N",     # pep8 Naming
    "PERF",  # Perflint
    "PD",    # pandas-vet
    "PL",    # Pylint
    "PT",    # flake8-pytest-style
    "PTH",   # flake8-use-pathlib
    "PYI",   # flake8-pyi
    "Q",     # flake8-quotes
    "RET",   # flake8-return
    "RUF",   # Ruff-specific rules
    "S",     # flake8-bandit
    "SIM",   # flake8-simplify
    "SLOT",  # flake8-slots
    "T10",   # flake8-debugger
    "T20",   # flake8-print
    "TCH",   # flake8-type-checking
    "TD",    # flake8-todos
    "TID",   # flake8-tidy-imports
    "TRY",   # tryceratops
    "UP",    # pyupgrade
    "W",     # pycodestyle Warning
    "YTT",   # flake8-2020
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.lint.isort]
known-first-party = ["src", "test"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools_scm]
root = "."

[tool.tox]
legacy_tox_ini = """
    [tox]
    env_list = {py311, py312}, coveralls, docs, package
    isolated_build = true
    no_package = false
    requires =
        tox>4
    skip_missing_interpreters = true


    [gh-actions]
    python =
        3.11: py311
        3.12: py312, coveralls, docs, package


    [testenv]
    commands =
        ruff check .
        ruff format --check .
        pyright .
        coverage erase
        pytest {posargs:.}
        coverage html
    deps =
        .
    description = test and lint the project
    download = true
    extras =
        test
    set_env =
        PYTHONPATH = {toxinidir}/src
        PYRIGHT_PYTHON_FORCE_VERSION = latest


    ;If running outside Github, ensure that the the `COVERALLS_REPO_TOKEN`
    ;environment variable is set.
    [testenv:coveralls]
    commands =
        coveralls --service=github
    description = submit coverage results to coverall.io
    extras =
        test
    pass_env =
        COVERALLS_REPO_TOKEN
        GITHUB_*


    [testenv:docs]
    changedir = docs
    commands =
        sphinx-build -EW --keep-going -b html . {toxinidir}/docs/build/html
        sphinx-lint -i api
    description = build sphinx documentation
    extras =
        docs


    [testenv:package]
    commands =
        python -c "import shutil; shutil.rmtree('dist', ignore_errors=True)"
        python -m build
    depends = testenv
    deps =
        build
    description = build the library
    skip_install = true
"""
